# pyOpenFOAM

./: .gitignore  .gitmodules  PLAN_REMAINING.md  README.md  README_zh.md  ROADMAP.md  SCHEDULED_TASK.md  STATUS.md  TASK_PLAN.md  _test_mesh_ops.py  cuda_cfd_test.py  debug_cavity.py  debug_cavity2.py  debug_cavity3.py  debug_cavity4.py  debug_cavity5.py  pyproject.toml  requirements.txt  run_of12_all.sh  run_of12_cavity.sh  run_of12_cavity_re.sh  run_of12_channel.sh  run_of12_couette.sh  run_of12_gravity.sh  run_of12_poiseuille.sh  run_of12_simple_cavity.sh  run_of12_step.sh  run_openfoam1906_cavity.sh  run_openfoam1906_cavity_all.sh  run_openfoam1906_poiseuille.sh  run_openfoam1906_simple.sh  run_validation.py  run_validation_piso_pimple.py  validate_cavity.py
benchmarks/: __init__.py  gpu_cpu_comparison.py  gpu_vs_cpu.py  large_mesh.py  linear_solve_benchmark.py  memory_scaling.py  mesh_generation.py  openfoam_comparison.py  plot_results.py  run_all.py  simple_iteration_benchmark.py  sparse_ops_benchmark.py  torch_compile_benchmark.py
docs/: DESIGN.md  PROPOSAL.md  ROADMAP.md  dev_status_2026_06_04.md  implementation_plan.md  migration_guide.md  openfoam_13_model_catalog.md  per_case_table.md  validation_report.md  validation_report_v4.md
scripts/: gen_enhanced_v6_10.py  generate_enhanced_bcs.py
tests/: conftest.py
validation/: __init__.py  comparator.py  generate_figures.py  generate_per_case_report.py  gpu_validate_all_solvers.py  huggingface_readme.md  metrics.py  run_all.py  run_all_tutorials.py  run_ascii_l2.py  run_batch_l2.py  run_comprehensive.py  (+10 more)
(+2927 files in other folders)
