[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfoam-cfd"
version = "0.1.0"
description = "Pure Python rewrite of OpenFOAM with PyTorch GPU acceleration"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "pyOpenFOAM Team"}
]
keywords = ["cfd", "openfoam", "pytorch", "gpu", "fluid-dynamics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
mpi = ["mpi4py"]
viz = ["pyvista", "matplotlib"]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfoam"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
